fix: update endpoint get profile user
