# routers/main.go
@@ -13,7 +13,7 @@ func CombineRouter(r *gin.Engine) {
 	authRouter(r.Group("/auth"))
 	moviesRouter(r.Group("/movies"))
 	transactionsRouter(r.Group("/transactions"))
-	userRouter(r.Group("/user"))
+	userRouter(r.Group("/profile"))
 	docs.SwaggerInfo.BasePath = "/"
 	r.GET("/docs", func(ctx *gin.Context) {
 		ctx.Redirect(http.StatusPermanentRedirect, "/docs/index.html")
